borre el boton borrar todos

--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -287,8 +287,8 @@
           <button type="button" class="btn btn-outline-success float-right" data-toggle="modal" data-target="#confirmar"
             onclick="cambio()">Registrar</button>
 
-          <button style="margin-right: 10px;" type="button" class="btn btn-outline-danger float-right" data-toggle="modal" data-target="#borrar_todo"
-          onclick="">Borrar Todo</button>
+          <!-- <button style="margin-right: 10px;" type="button" class="btn btn-outline-danger float-right" data-toggle="modal" data-target="#borrar_todo"
+          onclick="">Borrar Todo</button> -->
 
           <div class="modal fade" id="confirmar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
@@ -311,7 +311,7 @@
             </div>
           </div>
 
-          <div class="modal fade" id="borrar_todo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+          <!-- <div class="modal fade" id="borrar_todo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -330,7 +330,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </form>
       </div>
 
