Agregando validacion en los campos de cantidad insumo en la vista produccion y mejorando la funcion para comparar datos

--- a/templatedjango/apptemplate/templates/pedidos/pedidos.html
+++ b/templatedjango/apptemplate/templates/pedidos/pedidos.html
@@ -132,6 +132,14 @@
 
                             });
 
+                            // elemento_usuario = document.getElementById('id_elemento');
+                            // elemento_comparar = document.getElementById('id_elemento');
+
+                            // elemento.addEventListener('keyup',function(){
+                            //     alertacantidadmayor2(elemento_usuario,elemento_comparar);
+                                    
+                            // });
+
                         </script>
                     </form>
                 </div>
