--- a/templatedjango/apptemplate/templates/pedidos/pedidos.html
+++ b/templatedjango/apptemplate/templates/pedidos/pedidos.html
@@ -330,7 +330,7 @@
                 
                 {% if not enviar_detalles.id_pedido %}
                     
-                    <input type="hidden" name="id_pedidos" id="id_pedidos" value="{{enviar_detalles.id}}">
+                    <input type="hidden" name="id_pedidos" class="id_pedidos" value="{{enviar_detalles.id}}">
 
                     <!-- <p>{{enviar_detalles.id}}</p> -->
                 
@@ -411,7 +411,7 @@
                 enviar_cliente.value = select_clientes.value.split('-')[0];
                 total_pedido.value = total.value;
 
-                if (enviar_cliente.value != '' && select_clientes.value != null) {
+                if (select_clientes.value != null && parseInt(id_pedidos.length) > 0) {
                     
                     form_pedidos.submit();
                 }
