cambios en compras y pedidos

--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -120,8 +120,7 @@
                             </select>
 
                             <script>
-                              var elements = document.getElementsByClassName(
-                                'productos{{compra.id_detalles_compras}}')
+                              var elements = document.getElementsByClassName('productos{{compra.id_detalles_compras}}')
                               var select = document.getElementById('select{{compra.id_detalles_compras}}')
 
                               for (var i = 0; i < elements.length; i++) {
